# autodidact

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  install.py  install.sh  pyproject.toml  uninstall.py
agents/: architecture-researcher.md  code-reviewer.md  code-simplifier.md  codebase-analyzer.md  codebase-locator.md  fleet-worker.md  interviewer.md  pattern-finder.md  python-engineer.md  quality-scorer.md  security-reviewer.md  test-engineer.md  web-researcher.md
commands/: archon.md  campaign.md  do.md  experiment.md  fleet.md  forget.md  gc.md  handoff.md  learn.md  learn_status.md  loop.md  marshal.md  plan.md  polish.md  pr.md  publish.md  research.md  review.md  run.md  sync-thoughts.md
docs/: commands.md  learning-db.md  loop.md  planning.md
examples/: routing-overrides.json
hooks/: constants.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  task_completed.py  user_prompt_submit.py
scripts/: verify_docs.py
src/: __init__.py  circuit_breaker.py  confidence.py  convergence.py  db.py  documents.py  exit_tracker.py  experiment.py  fitness.py  git_utils.py  graduate.py  handoff.py  interview.py  loop.py  overrides.py  progress.py  response_analyzer.py  router.py  rtk_integration.py  self_assessment.py  session_miner.py  sync.py  task_graph.py  worktree.py
templates/: campaign_template.md  clarify_protocol.md  discovery_brief_template.md  handoff_template.md  skill_template.md
tests/: circuit_breaker_param_sweep.py  conftest.py  harness.py  test_db.py  (+29 more)
(+26 files in other folders)
